addded new component so-called Done List

--- a/src/components/Buttons/Button.module.css
+++ b/src/components/Buttons/Button.module.css
@@ -1,7 +1,7 @@
 
 
 .btn {
-    background-color: #9E78CF;
+    background-color: #815bb3;
     color: #fff;
     padding: 10px 30px;
     text-transform: capitalize;
