--- a/src/components/ListItem/Listitem.module.css
+++ b/src/components/ListItem/Listitem.module.css
@@ -11,6 +11,7 @@
     font-family: "Rubik", sans-serif;
     text-transform: capitalize;
     border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 .item p {
