--- a/src/components/Lists/Lists.module.css
+++ b/src/components/Lists/Lists.module.css
@@ -22,4 +22,6 @@ ul {
     list-style: none;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
